# AGON

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILDPLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RESEARCH_QUESTIONS.md  ROADMAP.md  RUST_IMPACT.md  SETUP.md  clippy.toml  compose.yaml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  bench.yml  ci.yml  docker.yml
PROJECT_LEDGER/: AGON_LEDGER.md  PERCEPTION_LEDGER.md  SESSION_LOG.md  STATE.json
crates/aco-bench/: Cargo.toml
crates/aco-bench/src/: lib.rs
crates/aco-cli/: Cargo.toml
crates/aco-cli/src/: main.rs
crates/aco-core/: Cargo.toml
crates/aco-core/src/: actor.rs  claim.rs  commitment.rs  common.rs  constraint.rs  enums.rs  error.rs  event.rs  fol.rs  id.rs  interest.rs  leverage.rs  lib.rs  narrative.rs  patterns.rs
crates/aco-core/tests/: proptest_roundtrip.rs
crates/aco-embed/: Cargo.toml
crates/aco-embed/src/: lib.rs
crates/aco-encode/: Cargo.toml  README.md
crates/aco-encode/src/: bge_m3.rs.skel  download.rs  lib.rs  traits.rs
crates/aco-fuse/: Cargo.toml
crates/aco-fuse/src/: lib.rs
crates/aco-infer/: Cargo.toml
crates/aco-infer/src/: lib.rs
crates/aco-learn/: Cargo.toml
crates/aco-learn/src/: lib.rs
crates/aco-lex/: Cargo.toml
crates/aco-lex/src/: lib.rs
crates/aco-llm/: Cargo.toml
crates/aco-llm/config/: routing.toml
crates/aco-llm/src/: cost.rs  lib.rs  mock.rs  vertex.rs
crates/aco-patterns/: Cargo.toml
crates/aco-patterns/data/: expectations.toml
crates/aco-patterns/src/: absence.rs  anchoring.rs  context.rs  darvo.rs  lib.rs
crates/aco-perceive/: Cargo.toml
crates/aco-perceive/src/: lib.rs
crates/aco-score/: Cargo.toml
crates/aco-score/src/: lib.rs
crates/aco-server/: Cargo.toml
crates/aco-server/assets/: app.js  index.html  styles.css
crates/aco-server/src/: app.rs  lib.rs  pretransform.rs  prompts.rs
crates/aco-storage/: Cargo.toml
crates/aco-storage/src/: lib.rs
crates/aco-text/: Cargo.toml
crates/aco-text/src/: lib.rs  normalize.rs  quoted.rs  segment.rs  turns.rs  verify.rs
crates/aco-time/: Cargo.toml
crates/aco-time/src/: lib.rs
crates/tacitus-contracts/: Cargo.toml  README.md
crates/tacitus-contracts/schemas/: actor.json  claim.json  commitment.json  contradiction.json  event.json  evidence_span.json  pattern_match.json  provenance.json
crates/tacitus-contracts/src/: lib.rs  primitives.rs  schemas.rs
crates/tacitus-contracts/tests/: test_schemas.rs
docs/: AGON_CONFLICT_INTELLIGENCE_IMPLEMENTATION_BRIEF.md  AGON_GUIDE.md  AGON_MVP_PLUS_PLAN.md  AUDIT_2026-05-13.md  BUILD_PLAN_PERCEPTION.md  DEMO_RECIPES.md  DEPLOYMENT_GCP.md  EXTERNALS.md  HONEST_STATE.md  INDEX.md  INTEROP.md
docs/research/: AGON_CONFLICT_INTELLIGENCE_BLUEPRINT.md
infra/: bootstrap.sh  connect-github.sh  policy-allow-all-domains.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars
infra/terraform/modules/artifact_registry/: main.tf
infra/terraform/modules/cloud_run/: main.tf
infra/terraform/modules/cloud_sql/: main.tf
infra/terraform/modules/eventarc/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/network/: main.tf
infra/terraform/modules/secrets/: main.tf
infra/terraform/modules/storage/: main.tf
migrations/: 20260511000001_init.sql  20260511000002_typed_mvp_storage.sql  20260512000001_conflict_vision_layers.sql
scripts/: README.md  agon-down.ps1  agon-down.sh  agon-nuke.sh  agon-status.ps1  agon-status.sh  agon-up.ps1  agon-up.sh
