[package]
name = "aco-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Criterion benchmarks (not published)."

[dependencies]
aco-core = { workspace = true }
aco-infer = { workspace = true }
aco-fuse = { workspace = true }
aco-perceive = { workspace = true }
criterion = { workspace = true }
