[package]
name = "aco-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The `agon` binary."

[[bin]]
name = "agon"
path = "src/main.rs"

[dependencies]
aco-core = { workspace = true }
aco-llm = { workspace = true }
aco-embed = { workspace = true }
aco-storage = { workspace = true }
aco-perceive = { workspace = true }
aco-fuse = { workspace = true }
aco-infer = { workspace = true }
aco-score = { workspace = true }
aco-learn = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
serde_json = { workspace = true }
