[package]
name = "aco-perceive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel LLM extractors: entities, events, claims, affect, patterns, time."

[dependencies]
aco-core = { workspace = true }
aco-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
lopdf = { workspace = true }
docx-rs = { workspace = true }
pulldown-cmark = { workspace = true }
