[package]
name = "aco-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum HTTP/WS dashboard server."

[[bin]]
name = "agon-server"
path = "src/bin/agon-server.rs"

[dependencies]
aco-core = { workspace = true }
aco-embed = { workspace = true }
aco-infer = { workspace = true }
aco-llm = { workspace = true }
aco-storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
regex = "1"
once_cell = { workspace = true }
